# wxpay

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  autoload.php  composer.json  deny.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: Build.yml  alert-gateway-perf.yml  audit.yml  rust-clippy.yml
WeChatPay/: Autoloader.php  WxPay.php  WxPayApi.php  WxPayBizPayUrl.php  WxPayCloseOrder.php  WxPayConfig.php  WxPayDataBase.php  WxPayDownloadBill.php  WxPayException.php  WxPayJsApiPay.php  WxPayMicroPay.php  WxPayNotify.php  WxPayNotifyReply.php  WxPayOrderQuery.php  WxPayRefund.php  WxPayRefundQuery.php  WxPayReport.php  WxPayResults.php  WxPayReverse.php  WxPayShortUrl.php  WxPayUnifiedOrder.php
benches/: crypto.rs
docs/: README.md
example/: wxpayTest.php
examples/: alert_gateway_adapter.rs  cert_download_demo.rs  crypto_demo.rs  payment_native.rs  query_and_refund.rs  signing_demo.rs  transfer_and_profit_sharing.rs  webhook_actix.rs  webhook_axum.rs
examples/alert_gateway_adapter/: alert_gateway_adapter_tests.rs
examples/common/: mod.rs
src/: Autoloader.class.php  Autoloader.php  WxPay.class.php  WxPay.php  WxPayApi.php  WxPayBizPayUrl.class.php  WxPayBizPayUrl.php  WxPayCloseOrder.class.php  WxPayCloseOrder.php  WxPayConfig.php  WxPayDataBase.class.php  WxPayDataBase.php  WxPayDownloadBill.class.php  WxPayDownloadBill.php  WxPayException.php  WxPayJsApiPay.class.php  WxPayJsApiPay.php  WxPayMicroPay.php  WxPayNotify.php  WxPayNotifyReply.php  WxPayOrderQuery.php  WxPayRefund.php  WxPayRefundQuery.php  WxPayReport.php  WxPayResults.php  WxPayReverse.php  WxPayShortUrl.php  WxPayUnifiedOrder.php  config.rs  docs.rs  error.rs  lib.rs  wxpay.php
src/auth/: credentials.rs  mod.rs  signer.rs  verifier.rs
src/cert/: downloader.rs  manager.rs  mod.rs
src/client/: builder.rs  mod.rs
src/crypto/: aes.rs  hash.rs  mod.rs  rsa.rs
src/http/: client.rs  mod.rs  request.rs  response.rs
src/lib/: JsApiPay.class.php  MicroPay.class.php  NativePay.class.php  WxPayApi.class.php  WxPayConfig.class.php  WxPayException.class.php  WxPayMicroPay.class.php  WxPayNotify.class.php  WxPayOrderQuery.class.php  WxPayRefund.class.php  WxPayRefundQuery.class.php  WxPayReport.class.php  WxPayResults.class.php  WxPayReverse.class.php  WxPayUnifiedOrder.class.php
src/notify/: handler.rs  mod.rs  parser.rs
src/services/: certificate.rs  mod.rs  profit_sharing.rs  query.rs  refund.rs  transfer.rs  transport.rs
src/services/payments/: app.rs  h5.rs  jsapi.rs  mod.rs  native.rs
src/utils/: mod.rs  nonce.rs  serialization.rs  timestamp.rs
tests/: http_retry_integration.rs  services_integration.rs
tests/common/: mod.rs
