[package]
name = "wxpay-rs"
version = "2.0.0"
edition = "2024"
authors = ["houseme <housemecn@gmail.com>"]
description = "WeChat Pay API v3 Rust SDK"
documentation = "https://docs.rs/wxpay-rs"
readme = "README.md"
homepage = "https://github.com/houseme/wxpay"
repository = "https://github.com/houseme/wxpay"
license = "Apache-2.0"
keywords = ["wechat", "wechatpay", "payment", "sdk", "api"]
categories = ["api-bindings", "web-programming::http-client"]

[lib]
name = "wxpay_rs"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
# 异步运行时
tokio = { version = "1.52", features = ["full"] }
async-trait = "0.1"

# HTTP 客户端
reqwest = { version = "0.13.4", default-features = false, features = ["charset", "http2", "system-proxy", "json", "form", "query", "hickory-dns"] }

# TLS
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# 错误处理
thiserror = "2.0"

# 日志
tracing = "0.1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID 生成
uuid = { version = "1.23", features = ["v4"] }

# URL 解析
url = "2.5"

# 加密库
rsa = "0.10.0-rc.18"
sha2 = "0.11"
digest = "0.11.3"
aes-gcm = "0.11.0-rc.4"
base64 = "0.22"
hex = "0.4"
rand = "0.10.1"

# 证书处理
x509-cert = "0.3.0-rc.4"
der = "0.8"
pkcs1 = "0.8.0-rc.4"
pkcs8 = "0.11"
spki = "0.8"

# 异步工具
futures = "0.3"
pin-project-lite = "0.2"
hmac = "0.13.0"

[dev-dependencies]
# 测试框架
tokio-test = "0.4"
mockall = "0.14.0"
wiremock = "0.6"
pretty_assertions = "1.4"
axum = "0.8"
actix-web = "4.11"
dotenvy = "0.15"

# 测试数据生成
fake = { version = "5.1", features = ["derive"] }

# 性能测试
criterion = { version = "0.8", features = ["async_tokio"] }

[features]
default = ["tls-rustls"]
tls-rustls = ["reqwest/rustls"]
full = ["tls-rustls"]
docs = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
